fix wrong position of btn

--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -73,6 +73,7 @@
   &__img {
     width: 100%;
     height: 100%;
+    border-radius: inherit;
   }
 
   &__info {
